src/generate/rust/schema/snapshots/test_types__data_enum.snap
---
created: "2019-06-04T10:55:02.670824Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_types.rs
expression: generate_rust(&schemas)?
---
#[derive(Clone, Debug, Serialize, Deserialize)]
pub enum Foo {
    Bar {
        one: String,
        two: std::path::PathBuf,
    },
    Baz(std::borrow::Cow<'static, str>),
}

