src/generate/rust/schema/snapshots/test_types__plain_enum.snap
---
created: "2019-06-04T10:55:02.670832Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_types.rs
expression: generate_rust(&schemas)?
---
#[derive(Clone, Copy, Debug, Serialize, Deserialize)]
pub enum Foo {
    Bar,
}

