src/generate/rust/schema/snapshots/test_types__simple_struct.snap
---
created: "2019-06-04T10:55:02.670827Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_types.rs
expression: generate_rust(&schemas)?
---
#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct Foo {
    one: String,
    two: std::path::PathBuf,
}

